WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53325
[Qt] canvas.drawImage(HTMLVideoElement) doesn't work with Qt Multimedia backend
https://bugs.webkit.org/show_bug.cgi?id=53325
Summary
[Qt] canvas.drawImage(HTMLVideoElement) doesn't work with Qt Multimedia backend
Kalle Vahlman
Reported
2011-01-28 12:53:57 PST
Currently, the 2D canvas API call drawImage() with an video element fails to render the video frame to the canvas with the Qt Multimedia backend. The drawImage() call eventually ends up calling MediaPlayerPrivate::paintCurrentFrameInContext() which simply delegates to paint(). There seems to be two issues with this: - When AC is enabled, the paint() call is a no-op, thus the rendering never happens. - Even without AC, rendering the scene to the context painter doesn't work (not sure why this is). A simple solution for this is to reimplement the paintCurrentFrameInContext() and paint the QGraphicsVideoItem directly, so the video scene state doesn't affect the rendering (I suppose that's the problem currently). Patch incoming.
Attachments
Patch to fix drawImage(HTMLVideoElement) for Qt Multimedia
(2.40 KB, patch)
2011-01-28 12:55 PST
,
Kalle Vahlman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kalle Vahlman
Comment 1
2011-01-28 12:55:51 PST
Created
attachment 80485
[details]
Patch to fix drawImage(HTMLVideoElement) for Qt Multimedia
Benjamin Poulain
Comment 2
2011-01-28 18:05:08 PST
Please follow
http://trac.webkit.org/wiki/QtWebKitBugs
when reporing bug here (missing Qt keyworkd).
Eric Seidel (no email)
Comment 3
2011-01-30 04:02:19 PST
Looks sane to me, but a Qt person shoudl really look.
Andreas Kling
Comment 4
2011-01-31 17:00:10 PST
Comment on
attachment 80485
[details]
Patch to fix drawImage(HTMLVideoElement) for Qt Multimedia Kool fix! r=me
WebKit Commit Bot
Comment 5
2011-01-31 19:46:31 PST
Comment on
attachment 80485
[details]
Patch to fix drawImage(HTMLVideoElement) for Qt Multimedia Clearing flags on attachment: 80485 Committed
r77207
: <
http://trac.webkit.org/changeset/77207
>
WebKit Commit Bot
Comment 6
2011-01-31 19:46:36 PST
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 7
2011-02-01 05:50:51 PST
Nice work. How
http://www.craftymind.com/factory/html5video/CanvasVideo.html
looks with the patch? :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug